--- a/css/photos.css
+++ b/css/photos.css
@@ -59,6 +59,7 @@ h1 {
 }
 
 .container .custom-box {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -75,15 +76,18 @@ h1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 32.5%;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
 }
 
 .container .custom-box .dream img {
-  width: 100%;
+  width: 350px;
   height: 400px;
   -o-object-fit: cover;
      object-fit: cover;
