--- a/scss/comments.scss
+++ b/scss/comments.scss
@@ -9,8 +9,10 @@
 }
 
 #comment_row img {
-  width: auto;
+  width: 35px;
   height: 35px;
+  object-fit: cover;
+  padding: 0%;
   border-radius: 100px;
 }
 
