--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,7 +1,9 @@
+$footer-color: #fff;
+
 footer {
   margin: 0%;
   padding: 0;
-  color: #fff;
+  color: $footer-color;
   text-align: center;
   bottom: 0;
   position: relative;
