--- a/css/wall.css
+++ b/css/wall.css
@@ -79,12 +79,17 @@ h1 {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  width: 32.5%;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin: auto;
 }
 
 .container .custom-box .dream img {
-  width: 100%;
+  margin: auto;
+  width: 350px;
   height: 400px;
   -o-object-fit: cover;
      object-fit: cover;
