--- a/scss/photos.scss
+++ b/scss/photos.scss
@@ -48,6 +48,7 @@ h1 {
   font-weight: 100;
 }
 .container .custom-box {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -55,12 +56,13 @@ h1 {
 
 .container .custom-box .dream {
   display: flex;
-  flex-direction: column;
-  width: 32.5%;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
 }
 
 .container .custom-box .dream img {
-  width: 100%;
+  width: 350px;
   height: 400px;
   object-fit: cover;
   /* padding-bottom: 15px; */
