--- a/scss/wall.scss
+++ b/scss/wall.scss
@@ -56,10 +56,12 @@ h1 {
     .dream {
       display: flex;
       flex-direction: row;
-      width: 32.5%;
+      flex-wrap: wrap;
+      justify-content: center;
       margin: auto;
       img {
-        width: 100%;
+        margin: auto;
+        width: 350px;
         height: 400px;
         object-fit: cover;
         padding: 5px;
