--- a/scss/search.scss
+++ b/scss/search.scss
@@ -1,21 +1,85 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+#search-bar-div {
+  width: 90%;
+  margin: auto;
+  margin-bottom: 100px;
+  text-align: center;
+  padding-top: 80px;
+  padding-bottom: 80px;
 
-h1,
-h2,
-h3,
-h5,
-h5,
-h6,
-p {
-  cursor: default;
-  font-family: "Poppins", sans-serif;
+  background: #eecda3; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #ef629f,
+    #eecda3
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #ef629f,
+    #eecda3
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  color: white;
 }
 
-h1 {
-  display: block !important;
-  font-size: 2em !important;
-  font-weight: bold !important;
+#search-bar-div form {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: all 1s;
+  width: 50px;
+  height: 50px;
+  background: white;
+  box-sizing: border-box;
+  border-radius: 25px;
+  border: 4px solid white;
+  padding: 5px;
+
+  input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 42.5px;
+    line-height: 30px;
+    outline: 0;
+    border: 0;
+    display: none;
+    font-size: 1em;
+    border-radius: 20px;
+    padding: 0 20px;
+  }
+
+  .fa {
+    font-family: "Font Awesome 5 Free" !important;
+    box-sizing: border-box;
+    padding: 10px;
+    width: 42.5px;
+    height: 42.5px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 50%;
+    color: #07051a;
+    text-align: center;
+    font-size: 1.2em;
+    transition: all 1s;
+  }
 }
+
+#search-bar-div form:hover {
+  width: 300px;
+  cursor: pointer;
+  input {
+    display: block;
+  }
+  .fa {
+    background: #07051a;
+    color: white;
+  }
+}
+
+// photo grid
 
 .container {
   display: flex;
@@ -76,6 +140,18 @@ h1 {
       letter-spacing: 3px;
     }
   }
+}
+
+button {
+  padding: 8px 25px !important;
+  background: transparent !important;
+  outline: none !important;
+  border: 2px solid black;
+  border-radius: 20px !important;
+  color: black;
+  font-size: 12px !important;
+  font-weight: bold !important;
+  cursor: pointer;
 }
 
 .image {
