--- a/html/components/navbar.html
+++ b/html/components/navbar.html
@@ -10,14 +10,25 @@
   </head>
   <body>
     <div style="margin-bottom: 100px">
-      <header>
-        <div class="nav_btn" id="navBtn">
+      <header class="bg-dark row" style="align-items: center">
+        <div class="nav_btn col-1" id="navBtn">
           <span></span>
           <span></span>
           <span></span>
         </div>
+        <div
+          class="col-6"
+          style="
+            color: white;
+            margin-left: 100px;
+            font-size: 20px;
+            letter-spacing: 2px;
+          "
+        >
+          PICASO
+        </div>
       </header>
-      <div class="nav deactive" id="navigation">
+      <div class="nav deactive bg-dark" id="navigation">
         <div class="nav_cover"></div>
         <div class="content_acc_detail">
           <img
