--- a/css/navbar.css
+++ b/css/navbar.css
@@ -7,22 +7,12 @@
   -moz-box-sizing: border-box;
 }
 
-/* font-family: 'Caveat', cursive; */
-body {
-  width: 100vw;
-  height: 100vh;
-  display: block;
-  overflow: hidden;
-  overflow-y: auto;
-}
-
 header {
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 60px;
-  background: black;
   -webkit-box-shadow: 0 0 10px #2a2a2a;
           box-shadow: 0 0 10px #2a2a2a;
   display: -webkit-box;
@@ -33,14 +23,12 @@ header {
 
 header .nav_btn {
   position: absolute;
-  top: 50%;
+  top: 18px;
   left: 15px;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  width: 35px;
-  height: 35px;
+  width: 60px;
   display: block;
-  background: #31363b;
   border-radius: 50%;
 }
 
@@ -101,7 +89,6 @@ header .nav_btn.active span:nth-child(3) {
   height: 100vh;
   display: block;
   z-index: 999;
-  background: black;
   -webkit-box-shadow: 0 0 20px black;
           box-shadow: 0 0 20px black;
   -webkit-transition: 0.5s;
