--- a/css/wall.css
+++ b/css/wall.css
@@ -171,4 +171,16 @@ h1 {
     font-size: 1em;
   }
 }
+
+button {
+  padding: 8px 25px !important;
+  background: transparent !important;
+  outline: none !important;
+  border: 2px solid black;
+  border-radius: 20px !important;
+  color: black;
+  font-size: 12px !important;
+  font-weight: bold !important;
+  cursor: pointer;
+}
 /*# sourceMappingURL=wall.css.map */
