--- a/html/components/navbar.html
+++ b/html/components/navbar.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <div style="margin-bottom: 100px">
-      <header class="bg-dark row" style="align-items: center">
-        <div class="nav_btn col-1" id="navBtn">
+      <header class="bg-dark" style="align-items: center">
+        <div class="nav_btn" id="navBtn">
           <span></span>
           <span></span>
           <span></span>
@@ -28,7 +28,7 @@
           PICASO
         </div>
       </header>
-      <div class="nav deactive bg-dark" id="navigation">
+      <div class="nav deactive" id="navigation">
         <div class="nav_cover"></div>
         <div class="content_acc_detail">
           <img
@@ -37,7 +37,7 @@
             style="object-fit: cover"
           />
           <div class="desc">
-            <h2 id="user_name"></h2>
+            <h2 id="user_name_nav"></h2>
           </div>
         </div>
         <ul class="nav_menu">
@@ -83,10 +83,7 @@
           </li>
         </ul>
         <div class="exit">
-          <span
-            class="btn logout"
-            onclick="window.location.href = 'login.html'"
-          >
+          <span class="btn logout" id="logout">
             <span class="tooltiptext">logout</span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
               <path
@@ -94,12 +91,8 @@
               />
             </svg>
           </span>
-          <span class="btn shutdown">
-            <span
-              class="tooltiptext"
-              onclick="window.location.href = 'login.html'"
-              >shut down</span
-            >
+          <span class="btn shutdown" id="logout">
+            <span class="tooltiptext">shut down</span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
               <path
                 d="M497 273L329 441c-15 15-41 4.5-41-17v-96H152c-13.3 0-24-10.7-24-24v-96c0-13.3 10.7-24 24-24h136V88c0-21.4 25.9-32 41-17l168 168c9.3 9.4 9.3 24.6 0 34zM192 436v-40c0-6.6-5.4-12-12-12H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h84c6.6 0 12-5.4 12-12V76c0-6.6-5.4-12-12-12H96c-53 0-96 43-96 96v192c0 53 43 96 96 96h84c6.6 0 12-5.4 12-12z"
@@ -113,10 +106,4 @@
       </section>
     </div>
   </body>
-  <script>
-    $(document).ready(function () {
-      let name = JSON.parse(sessionStorage.getItem("user_login_info"))[0].name;
-      $("#user_name").html(name.charAt(0).toUpperCase() + name.slice(1));
-    });
-  </script>
 </html>
