--- a/scss/navbar.scss
+++ b/scss/navbar.scss
@@ -20,17 +20,20 @@ header {
   left: 0;
   width: 100vw;
   height: 60px;
+
   box-shadow: 0 0 10px #2a2a2a;
   display: flex;
   z-index: 1000;
 
   .nav_btn {
     position: absolute;
-    top: 18px;
+    top: 50%;
     left: 15px;
     transform: translateY(-50%);
-    width: 60px;
+    width: 35px;
+    height: 35px;
     display: block;
+    background-color: #31363b;
     border-radius: 50%;
 
     span {
@@ -83,6 +86,7 @@ header .nav_btn.active span:nth-child(3) {
   height: 100vh;
   display: block;
   z-index: 999;
+  background-color: #212529;
   box-shadow: 0 0 20px black;
   transition: 0.5s;
 
@@ -252,7 +256,6 @@ header .nav_btn.active span:nth-child(3) {
   max-width: 300px;
   height: 100vh;
   display: block;
-  background-image: url("../images/180817.jpg");
   opacity: 0.7;
   background-position: center;
   background-size: cover;
