--- a/html/components/footer.html
+++ b/html/components/footer.html
@@ -4,16 +4,19 @@
     <img
       src="https://cdn-icons-png.flaticon.com/512/733/733547.png"
       width="25px"
+      alt="Facebook-logo"
     />
     Facebook &nbsp;&nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp;&nbsp;
     <img
       src="https://cdn-icons-png.flaticon.com/512/733/733571.png"
       width="25px"
+      alt="Snapchat-logo"
     />
     Snapchat &nbsp;&nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp;&nbsp;
     <img
       src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png"
       width="25px"
+      alt="Instagram-logo"
     />
     Instagram
   </div>
