--- a/css/home.css
+++ b/css/home.css
@@ -60,7 +60,7 @@ p {
 }
 
 .navbar {
-  padding-bottom: 0 0 4.5rem;
+  padding-bottom: 4.5rem;
 }
 
 .navbar-brand {
@@ -75,7 +75,6 @@ p {
 
 .nav-link {
   font-size: 1.5rem;
-  font-family: #08c9eb;
 }
 
 .banner-button {
