--- a/scss/home.scss
+++ b/scss/home.scss
@@ -48,7 +48,7 @@ p {
   text-align: center;
 }
 .navbar {
-  padding-bottom: 0 0 4.5rem;
+  padding-bottom: 4.5rem;
 }
 .navbar-brand {
   font-family: "Ubuntu", sans-serif;
@@ -60,7 +60,6 @@ p {
 }
 .nav-link {
   font-size: 1.5rem;
-  font-family: #08c9eb;
 }
 .banner-button {
   margin: 5% 6% 15% 0;
