--- a/scss/search.scss
+++ b/scss/search.scss
@@ -204,3 +204,12 @@ button {
     }
   }
 }
+
+#search_img_not_found {
+  border: 2px solid;
+  width: 80%;
+  height: 200px;
+  margin: auto;
+  align-content: center;
+  text-align: center;
+}
