--- a/scss/view.scss
+++ b/scss/view.scss
@@ -38,3 +38,11 @@ h5 {
 #myTable {
   max-width: 100%;
 }
+
+// uploads page validation
+
+.form-input-error {
+  color: red;
+  font-size: small;
+  text-align: end;
+}
